k8s/nautilus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drexeldise
  labels:
    name: drexeldise
